k8s/manifests/uptime/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime
spec:
  type: ClusterIP
  selector:
    app: uptime
  ports:
    - name: http
      port: 3001
      targetPort: http
