k8s/manifests/uptime/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: status.bugbear.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime
                port:
                  name: http
  tls:
    - hosts:
        - status.bugbear.fr
      secretName: uptime-tls
